--- a/docs/src/content/docs/manual-setup.mdx
+++ b/docs/src/content/docs/manual-setup.mdx
@@ -44,7 +44,7 @@ The Starlight integration is configured in your `astro.config.mjs` file.
 
 Add a `title` to get started:
 
-```js {7-9}
+```js ins="'My delightful docs site'"
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 import starlight from '@astrojs/starlight';
