--- a/docs/src/content/docs/hi/getting-started.mdx
+++ b/docs/src/content/docs/hi/getting-started.mdx
@@ -7,7 +7,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 Starlight [Astro](https://astro.build) फ्रेमवर्क के शीर्ष पर निर्मित एक पूर्ण-विशेषीकृत दस्तावेज़ीकरण थीम है।
 यह मार्गदर्शिका आपको एक नई परियोजना शुरू करने में मदद करेगी।
-मौजूदा Astro परियोजना में Starlight जोड़ने के लिए [मैन्युअल सेटअप निर्देश](/manual-setup/) देखें।
+मौजूदा Astro परियोजना में Starlight जोड़ने के लिए [मैन्युअल सेटअप निर्देश](/hi/manual-setup/) देखें।
 
 ## जल्दी शुरुआत करें
 
