--- a/docs/src/content/docs/hi/getting-started.mdx
+++ b/docs/src/content/docs/hi/getting-started.mdx
@@ -167,7 +167,7 @@ yarn upgrade @astrojs/starlight --latest
 यह सुनिश्चित करने के लिए कि आपकी Starlight साइट कॉन्फ़िगर है और ठीक से काम कर रही है, [परियोजना कॉन्फ़िगरेशन](/hi/reference/configuration/) और [व्यक्तिगत पेज फ्रंटमैटर कॉन्फ़िगरेशन](/hi/reference/frontmatter/) संदर्भ पेजो का उपयोग करें।
 सामग्री जोड़ने और अपनी स्टारलाइट साइट को अनुकूलित करने में सहायता के लिए साइडबार में मार्गदर्शिकाएँ देखें।
 
-यदि आपका उत्तर इन दस्तावेज़ों में नहीं मिल सकता है, तो संपूर्ण Astro दस्तावेज़ीकरण के लिए कृपया [Astro दस्तावेज़](https://docs.astro.build) देखें।
+यदि आपका उत्तर इन दस्तावेज़ों में नहीं मिल सकता है, तो संपूर्ण Astro दस्तावेज़ीकरण के लिए कृपया [Astro दस्तावेज़](https://docs.astro.build/hi) देखें।
 आपके प्रश्न का उत्तर यह समझकर दिया जा सकता है कि इस Starlight थीम के तहत Astro सामान्य रूप से कैसे काम करता है।
 
 आप [GitHub पर किसी ज्ञात Starlight समस्या](https://github.com/withastro/starlight/issues) की भी जांच कर सकते हैं, और हमारे सक्रिय, मैत्रीपूर्ण समुदाय से [Astro Discord](https://astro.build/chat/) में सहायता प्राप्त कर सकते हैं! हमारे `#support` फोरम में "Starlight" टैग के साथ प्रश्न पोस्ट करें, या वर्तमान विकास और अधिक पर चर्चा करने के लिए हमारे समर्पित `#Starlight` चैनल पर जाएँ!
