--- a/docs/src/content/docs/tr/guides/components.mdx
+++ b/docs/src/content/docs/tr/guides/components.mdx
@@ -170,7 +170,7 @@ import { Icon } from '@astrojs/starlight/components';
 import IconsList from '../../../../components/icons-list.astro';
 
 Starlight, içeriğinizde görünmesi için `<Icon>` bileşenini kullanarak bir grup ortak ikonları kullanımınıza sunar.
-Her `<Icon>` [`name`](#all-icons) değerine ihtiyaç duyar ve isteğe bağlı olarak `label`, `size`, ve `color` özellikleri eklenebilir.
+Her `<Icon>` [`name`](#tüm-i̇konlar) değerine ihtiyaç duyar ve isteğe bağlı olarak `label`, `size`, ve `color` özellikleri eklenebilir.
 
 ```mdx
 import { Icon } from '@astrojs/starlight/components';
