--- a/docs/src/content/docs/tr/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/tr/guides/css-and-tailwind.mdx
@@ -49,7 +49,7 @@ Astro projelerinde Tailwind CSS desteği, [Astro Tailwind entegrasyonu](https://
 Starlight Tailwind eklentisi aşağıdaki yapılandırmayı uygular:
 
 - Tailwind'in `dark:` varyantlarını Starlight'ın karanlık moduyla uyumlu hale getirir.
-- Starlight'ın kullanıcı arayüzünde Tailwind [tema renklerini ve yazı tiplerini](#styling-starlight-with-tailwind) kullanır.
+- Starlight'ın kullanıcı arayüzünde Tailwind [tema renklerini ve yazı tiplerini](#starlightı-tailwind-ile-stilize-etme) kullanır.
 - Tailwind'in [Preflight](https://tailwindcss.com/docs/preflight) sıfırlama stillerini devre dışı bırakır ve yalnızca Tailwind'in kenar kullanım sınıfları için gerekli olan Preflight'in temel kısımlarını seçici bir şekilde geri yükler.
 
 ### Tailwind ile yeni bir proje oluştur
