i18n(hi): update manual setup, update punctuation mark

--- a/packages/starlight/translations/hi.json
+++ b/packages/starlight/translations/hi.json
@@ -13,7 +13,7 @@
   "sidebarNav.accessibleLabel": "मुख्य",
   "tableOfContents.onThisPage": "इस पृष्ठ पर",
   "tableOfContents.overview": "अवलोकन",
-  "i18n.untranslatedContent": "यह कंटेंट अभी तक आपकी भाषा में उपलब्ध नहीं है.",
+  "i18n.untranslatedContent": "यह कंटेंट अभी तक आपकी भाषा में उपलब्ध नहीं है।",
   "page.editLink": "पृष्ठ संपादित करें",
   "page.lastUpdated": "आखिरी अद्यतन:",
   "page.previousLink": "पिछला",
