--- a/docs/src/content/docs/tr/reference/configuration.mdx
+++ b/docs/src/content/docs/tr/reference/configuration.mdx
@@ -210,7 +210,7 @@ interface BadgeConfig {
 
 **Tür:** <code>\{ \[dir: string\]: [LocaleConfig](#localeconfig) \}</code>
 
-[Siteniz için uluslararasılaştırmayı (i18n)](/guides/i18n/) yapılandırarak hangi `locales`'in desteklendiğini belirleyin.
+[Siteniz için uluslararasılaştırmayı (i18n)](/tr/guides/i18n/) yapılandırarak hangi `locales`'in desteklendiğini belirleyin.
 
 Her giriş, o dilin dosyalarının kaydedildiği dizini anahtar olarak kullanmalıdır.
 
@@ -386,7 +386,7 @@ interface HeadConfig {
 
 Sayfanın en son ne zaman güncellendiğini kontrol edin.
 
-Varsayılan olarak, bu özellik, depo Git geçmişinize dayanır ve [yüzeysel klonlar](https://git-scm.com/docs/git-clone#Documentation/git-clone.txt---depthltdepthgt) gerçekleştiren bazı dağıtım platformlarında doğru olmayabilir. Bir sayfa bu ayarı veya Git tabanlı tarihi [`lastUpdated` sahasını](/reference/frontmatter/#lastupdated) kullanarak geçersiz kılabilir.
+Varsayılan olarak, bu özellik, depo Git geçmişinize dayanır ve [yüzeysel klonlar](https://git-scm.com/docs/git-clone#Documentation/git-clone.txt---depthltdepthgt) gerçekleştiren bazı dağıtım platformlarında doğru olmayabilir. Bir sayfa bu ayarı veya Git tabanlı tarihi [`lastUpdated` sahasını](/tr/reference/frontmatter/#lastupdated) kullanarak geçersiz kılabilir.
 
 ### `pagination`
 
@@ -395,7 +395,7 @@ Varsayılan olarak, bu özellik, depo Git geçmişinize dayanır ve [yüzeysel k
 
 Altbilginin önceki ve sonraki sayfa bağlantılarını içerip içermediğini tanımlar.
 
-Bir sayfa bu ayarı veya bağlantı metni ve/veya URL'sini [`prev`](/reference/frontmatter/#prev) ve [`next`](/reference/frontmatter/#next) önemli alanları kullanarak geçersiz kılabilir.
+Bir sayfa bu ayarı veya bağlantı metni ve/veya URL'sini [`prev`](/tr/reference/frontmatter/#prev) ve [`next`](/tr/reference/frontmatter/#next) önemli alanları kullanarak geçersiz kılabilir.
 
 ### `favicon`
 
@@ -454,4 +454,4 @@ starlight({
 });
 ```
 
-Tüm geçersiz kılınabilecek bileşenlerin ayrıntıları için [Geçersiz Kılmalar Referansına](/reference/overrides/) göz atın.
+Tüm geçersiz kılınabilecek bileşenlerin ayrıntıları için [Geçersiz Kılmalar Referansına](/tr/reference/overrides/) göz atın.
