Add more EC text markers and frames to Starlight docs (#1102)
Co-authored-by: Hippo <6137925+hippotastic@users.noreply.github.com>
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>
Co-authored-by: Kevin Zuniga Cuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/docs/src/content/docs/manual-setup.mdx
+++ b/docs/src/content/docs/manual-setup.mdx
@@ -44,7 +44,7 @@ The Starlight integration is configured in your `astro.config.mjs` file.
 
 Add a `title` to get started:
 
-```js {7-9}
+```js ins={8}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 import starlight from '@astrojs/starlight';
