--- a/docs/src/content/docs/fr/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/fr/guides/css-and-tailwind.mdx
@@ -22,7 +22,7 @@ Personnalisez les styles appliqués à votre site Starlight en fournissant des f
 
 2. Ajoutez le chemin vers votre fichier CSS au tableau `customCss` de Starlight dans votre configuration `astro.config.mjs` :
 
-   ```js
+   ```diff lang="js"
    // astro.config.mjs
    import { defineConfig } from 'astro/config';
    import starlight from '@astrojs/starlight';
@@ -32,8 +32,8 @@ Personnalisez les styles appliqués à votre site Starlight en fournissant des f
    		starlight({
    			title: 'Documentation avec CSS personnalisé',
    			customCss: [
-   				// Chemin relatif vers votre fichier CSS personnalisé
-   				'./src/styles/custom.css',
+   +				// Chemin relatif vers votre fichier CSS personnalisé
+   +				'./src/styles/custom.css',
    			],
    		}),
    	],
