--- a/docs/src/content/docs/fr/guides/i18n.mdx
+++ b/docs/src/content/docs/fr/guides/i18n.mdx
@@ -11,7 +11,7 @@ Starlight offre une prise en charge intégrée des sites multilingues, y compris
 
 1. Indiquez à Starlight les langues que vous prenez en charge en passant [`locales`](/fr/reference/configuration/#locales) et [`defaultLocale`](/fr/reference/configuration/#defaultlocale) à l'intégration Starlight :
 
-   ```js
+   ```js {9-26}
    // astro.config.mjs
    import { defineConfig } from 'astro/config';
    import starlight from '@astrojs/starlight';
@@ -69,7 +69,7 @@ Vous pouvez utiliser une “racine” locale pour servir une langue sans aucun p
 
 Pour définir une racine locale, utilisez la clé `root` dans votre configuration `locales`. Si la racine locale est aussi la locale par défaut de votre contenu, supprimez `defaultLocale` ou donnez-lui la valeur `'root''.
 
-```js
+```js {9,11-14}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 import starlight from '@astrojs/starlight';
@@ -111,7 +111,7 @@ Lorsque vous utilisez une locale `root`, gardez les pages pour cette langue dire
 
 Par défaut, Starlight est un site monolingue (anglais). Pour créer un site monolingue dans une autre langue, définissez-la comme `root` dans votre configuration `locales` :
 
-```js
+```diff lang="js" {10-13}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 import starlight from '@astrojs/starlight';
@@ -151,14 +151,14 @@ Vous pouvez fournir des traductions pour les langues supplémentaires que vous s
 
 1. Configurez la collection de données `i18n` dans `src/content/config.ts` si elle n'est pas déjà configurée :
 
-   ```js
+   ```diff lang="js" ins=/, (i18nSchema)/
    // src/content/config.ts
    import { defineCollection } from 'astro:content';
    import { docsSchema, i18nSchema } from '@astrojs/starlight/schema';
 
    export const collections = {
    	docs: defineCollection({ schema: docsSchema() }),
-   	i18n: defineCollection({ type: 'data', schema: i18nSchema() }),
+   +	i18n: defineCollection({ type: 'data', schema: i18nSchema() }),
    };
    ```
 
@@ -201,6 +201,17 @@ Vous pouvez fournir des traductions pour les langues supplémentaires que vous s
    	"page.previousLink": "Next",
    	"page.nextLink": "Previous",
    	"404.text": "Page not found. Check the URL or try using the search bar."
+   }
+   ```
+
+   Les blocs de code de Starlight fonctionnent grâce à la librairie [Expressive Code](https://github.com/expressive-code/expressive-code).
+   Vous pouvez définir des traductions pour les textes de l'interface utilisateur utilisés dans le même fichier JSON en utilisant les clés `expressiveCode` :
+
+   ```json
+   {
+   	"expressiveCode.copyButtonCopied": "Copied!",
+   	"expressiveCode.copyButtonTooltip": "Copy to clipboard",
+   	"expressiveCode.terminalWindowFallbackTitle": "Terminal window"
    }
    ```
 
