i18n(fr): update `manual-setup.mdx`

--- a/docs/src/content/docs/fr/manual-setup.mdx
+++ b/docs/src/content/docs/fr/manual-setup.mdx
@@ -44,7 +44,7 @@ L'intégration Starlight est configurée dans votre fichier `astro.config.mjs`.
 
 Ajoutez un titre avec la propriété `title` pour commencer :
 
-```js {7-9}
+```js ins={8}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 import starlight from '@astrojs/starlight';
