i18n(ko-KR): update `manual-setup.mdx`

--- a/docs/src/content/docs/ko/manual-setup.mdx
+++ b/docs/src/content/docs/ko/manual-setup.mdx
@@ -43,7 +43,7 @@ Starlight 통합은 `astro.config.mjs` 파일에서 구성됩니다.
 
 시작하려면 `title`을 추가하세요.
 
-```js {7-9}
+```js ins={8}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 import starlight from '@astrojs/starlight';
