docs: apply chris suggestions
Co-authored-by: Chris Swithinbank <357379+delucis@users.noreply.github.com>

--- a/docs/src/content/docs/reference/configuration.mdx
+++ b/docs/src/content/docs/reference/configuration.mdx
@@ -526,9 +526,9 @@ See the [Overrides Reference](/reference/overrides/) for details of all the comp
 **type:** [`StarlightPlugin[]`](/reference/plugins/#quick-api-reference)
 
 Extend Starlight with custom plugins.
-Starlight Plugins are an easy way to extend Starlight's functionality.
+Plugins apply changes to your project to modify or add to Starlight's features.
 
-Visit the [Starlight Plugins Showcase](/showcase/#community-plugins) to see a list of community plugins.
+Visit the [plugins showcase](/showcase/#community-plugins) to see a list of community plugins.
 
 ```js
 starlight({
