--- a/docs/src/content/docs/es/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/es/guides/css-and-tailwind.mdx
@@ -22,7 +22,7 @@ Personaliza los estilos aplicados a tu sitio Starlight proporcionando archivos C
 
 2. Agrega la ruta de tu archivo CSS al array `customCss` de Starlight en `astro.config.mjs`:
 
-   ```js
+   ```diff lang="js"
    // astro.config.mjs
    import { defineConfig } from 'astro/config';
    import starlight from '@astrojs/starlight';
@@ -32,8 +32,8 @@ Personaliza los estilos aplicados a tu sitio Starlight proporcionando archivos C
    		starlight({
    			title: 'Docs With Custom CSS',
    			customCss: [
-   				// Ruta relativa a tu archivo CSS personalizado
-   				'./src/styles/custom.css',
+   +                // Ruta relativa a tu archivo CSS personalizado
+   +				'./src/styles/custom.css',
    			],
    		}),
    	],
