--- a/docs/src/content/docs/reference/configuration.mdx
+++ b/docs/src/content/docs/reference/configuration.mdx
@@ -416,7 +416,7 @@ When using custom themes and setting this to `true`, you must provide at least o
 **type:** `boolean`  
 **default:** `true`
 
-Define if Starlight’s default site search provider [Pagefind](https://pagefind.app/) is enabled.
+Define whether Starlight’s default site search provider [Pagefind](https://pagefind.app/) is enabled.
 
 Set to `false` to disable indexing your site with Pagefind.
 This will also hide the default search UI if in use.
