update: update manual-setup

--- a/docs/src/content/docs/es/manual-setup.mdx
+++ b/docs/src/content/docs/es/manual-setup.mdx
@@ -44,7 +44,7 @@ La integración de Starlight está configurada en tu archivo `astro.config.mjs`.
 
 Agrega un `title` para comenzar:
 
-```js {7-9}
+```js ins={8}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 import starlight from '@astrojs/starlight';
