i18n(fr): translate some frame titles

--- a/docs/src/content/docs/fr/guides/components.mdx
+++ b/docs/src/content/docs/fr/guides/components.mdx
@@ -16,7 +16,7 @@ Ces balises ressemblent à des balises HTML mais commencent par une lettre majus
 
 ```mdx
 ---
-# src/content/docs/example.mdx
+# src/content/docs/exemple.mdx
 title: Bienvenue dans ma documentation
 ---
 
@@ -40,7 +40,7 @@ Si ces styles entrent en conflit avec l'apparence de votre composant, définisse
 
 ```astro 'class="not-content"'
 ---
-// src/components/Example.astro
+// src/components/Exemple.astro
 ---
 
 <div class="not-content">
@@ -61,7 +61,7 @@ Vous pouvez afficher une interface à onglets en utilisant les composants `<Tabs
 Chaque `<TabItem>` doit avoir un `label` à afficher aux utilisateurs.
 
 ```mdx
-# src/content/docs/example.mdx
+# src/content/docs/exemple.mdx
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
@@ -88,7 +88,7 @@ Enveloppez plusieurs cartes dans le composant `<CardGrid>` pour afficher les car
 Une `<Card>` nécessite un `title` et peut optionellement inclure un attribut `icon` fixé au nom de [l'une des icônes intégrées de Starlight](#toutes-les-icônes).
 
 ```mdx
-# src/content/docs/example.mdx
+# src/content/docs/exemple.mdx
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
@@ -142,7 +142,7 @@ Une `<LinkCard>` nécessite les attributs `title` et [`href`](https://developer.
 Regroupez plusieurs composants `<LinkCard>` dans `<CardGrid>` pour afficher les cartes côte à côte lorsqu'il y a suffisamment d'espace.
 
 ```mdx
-# src/content/docs/example.mdx
+# src/content/docs/exemple.mdx
 
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
@@ -189,7 +189,7 @@ Starlight fournit un ensemble d'icônes courantes que vous pouvez afficher dans 
 Chaque `<Icon>` nécessite un [`name`](#toutes-les-icônes) et peut optionellement inclure un attribut `label`, `size` et `color`.
 
 ```mdx
-# src/content/docs/example.mdx
+# src/content/docs/exemple.mdx
 
 import { Icon } from '@astrojs/starlight/components';
 
