--- a/docs/src/content/docs/tr/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/tr/guides/css-and-tailwind.mdx
@@ -30,7 +30,7 @@ Starlight sitesine uygulanan stilleri özelleştirmek için, Starlight'ın varsa
    export default defineConfig({
    	integrations: [
    		starlight({
-   			title: 'Docs With Custom CSS',
+   			title: 'Özelleştirilmiş CSS İle Dökümanlar',
    			customCss: [
    +				// Özel CSS dosyanızın göreli yolunu.
    +				'./src/styles/custom.css',
