--- a/docs/src/content/docs/tr/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/tr/guides/css-and-tailwind.mdx
@@ -166,7 +166,7 @@ Eğer zaten bir Starlight sitesine sahipseniz ve Tailwind CSS eklemek istiyorsan
     export default defineConfig({
     	integrations: [
     		starlight({
-    			title: 'Docs with Tailwind',
+    			title: 'Tailwind içeren dokümanlar',
     			customCss: [
     				// Tailwind temel stillerinizin yolunu belirtin:
     				'./src/tailwind.css',
