--- a/docs/src/content/docs/tr/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/tr/guides/css-and-tailwind.mdx
@@ -276,7 +276,7 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 	}}
 >
 	<Fragment slot="css-docs">
-		Bu temayı sitenize uygulamak için projenize aşağıdaki CSS kodunu [özel bir CSS dosyasına](#custom-css-styles) ekleyin:
+		Bu temayı sitenize uygulamak için projenize aşağıdaki CSS kodunu [özel bir CSS dosyasına](#özel-css-stilleri) ekleyin:
 	</Fragment>
 	<Fragment slot="tailwind-docs">
 		Aşağıdaki örnek [Tailwind yapılandırma dosyası](#styling-starlight-with-tailwind),
