docs: revert showcase.mdx

--- a/docs/src/content/docs/showcase.mdx
+++ b/docs/src/content/docs/showcase.mdx
@@ -4,7 +4,7 @@ description: Discover sites built with Starlight and community tools that extend
 ---
 
 :::tip[Add your own!]
-Have you built a Starlight site, plugin, or a tool for Starlight?
+Have you built a Starlight site or a tool for Starlight?
 Open a PR adding a link to this page!
 :::
 
@@ -20,15 +20,9 @@ See all the [public project repos using Starlight on GitHub](https://github.com/
 
 ## Community plugins
 
-These community [plugins](/reference/configuration/#plugins) work alongside Starlight to extend its functionality.
-
-// TODO(HiDeoo) This new structure is a proposal and should only be used once we have at least a plugin to showcase.
-
-## Community tools and integrations
-
 import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 
-These community tools and integrations can be used to add features to your Starlight site.
+These community tools, plugins, and integrations work alongside Starlight to extend its functionality.
 
 <CardGrid>
 	<LinkCard
