i18n(zh-CN): Update getting-started.mdx

--- a/docs/src/content/docs/zh-cn/getting-started.mdx
+++ b/docs/src/content/docs/zh-cn/getting-started.mdx
@@ -48,7 +48,7 @@ yarn create astro --template starlight
 
 ### 启动开发服务器
 
-在本地工作时，Astro的开发服务器允许你预览你的工作，并在你进行更改时自动刷新你的浏览器。
+在本地工作时，[Astro的开发服务器](https://docs.astro.build/zh-cn/reference/cli-reference/#astro-dev)允许你预览你的工作，并在你进行更改时自动刷新你的浏览器。
 
 在你的项目目录中，运行以下命令来启动开发服务器：
 
@@ -83,12 +83,12 @@ yarn dev
 
 Starlight已经准备好让你添加新内容或导入你现有的文件！
 
-### 文件格式
+#### 文件格式
 
 Starlight支持在Markdown和MDX中编写内容，无需进行任何配置。
 你可以通过安装实验性的[Astro Markdoc](https://docs.astro.build/zh-cn/guides/integrations-guide/markdoc/)集成来添加对Markdoc的支持。
 
-### 添加页面
+#### 添加页面
 
 通过在 `src/content/docs/` 中创建 `.md` 或 `.mdx` 文件来为你的站点添加新页面。
 使用子文件夹来组织你的文件并创建多个路径段。
@@ -170,7 +170,7 @@ yarn upgrade @astrojs/starlight --latest
 
 请参阅侧边栏中的指南列表，以获取有关添加内容和自定义 Starlight 网站的帮助。
 
-如果你在这些文档中找不到答案，请访问[完整的 Astro 文档](https://docs.astro.build) 以获取完整的 Astro 文档。
+如果你在这些文档中找不到答案，请访问[完整的 Astro 文档](https://docs.astro.build/zh-cn/) 以获取完整的 Astro 文档。
 你的问题可能是通过了解 Starlight 主题下 Astro 的工作原理来解决的。
 
 你也可以检查任何已知的 [GitHub 上的 Starlight issues](https://github.com/withastro/starlight/issues)，并在 [Astro Discord](https://astro.build/chat/) 上从我们活跃的、友好的社区中获得帮助！在我们的 `#support` 论坛中发布带有 “starlight” 标签的问题，或者访问我们专门的 `#starlight` 频道来讨论当前的开发和更多内容！
