--- a/docs/src/content/docs/reference/configuration.mdx
+++ b/docs/src/content/docs/reference/configuration.mdx
@@ -411,6 +411,16 @@ When `false`, the colors provided by the active syntax highlighting theme are us
 When using custom themes and setting this to `true`, you must provide at least one dark and one light theme to ensure proper color contrast.
 :::
 
+### `pagefind`
+
+**type:** `boolean`  
+**default:** `true`
+
+Define whether Starlight’s default site search provider [Pagefind](https://pagefind.app/) is enabled.
+
+Set to `false` to disable indexing your site with Pagefind.
+This will also hide the default search UI if in use.
+
 ### `head`
 
 **type:** [`HeadConfig[]`](#headconfig)
