Fixed backwards docs — thank you @HiDeoo 😅
Co-authored-by: HiDeoo <494699+HiDeoo@users.noreply.github.com>

--- a/docs/src/content/docs/guides/site-search.mdx
+++ b/docs/src/content/docs/guides/site-search.mdx
@@ -93,8 +93,8 @@ If you have access to [Algolia’s DocSearch program](https://docsearch.algolia.
    			plugins: [
    				starlightDocSearch({
    					appId: 'YOUR_APP_ID',
-   					apiKey: 'YOUR_INDEX_NAME',
-   					indexName: 'YOUR_SEARCH_API_KEY',
+   					apiKey: 'YOUR_SEARCH_API_KEY',
+   					indexName: 'YOUR_INDEX_NAME',
    				}),
    			],
    		}),
