--- a/docs/src/content/docs/guides/site-search.mdx
+++ b/docs/src/content/docs/guides/site-search.mdx
@@ -107,7 +107,7 @@ With this updated configuration, the search bar on your site will now open an Al
 #### Translating the DocSearch UI
 
 DocSearch only provides English UI strings by default.
-Add translations for your language using Starlight’s built-in [internationalization system](/guides/i18n/#translate-starlights-ui).
+Add translations of the modal UI for your language using Starlight’s built-in [internationalization system](/guides/i18n/#translate-starlights-ui).
 
 1. Extend Starlight’s `i18n` content collection definition with the DocSearch schema in `src/content/config.ts`:
 
@@ -132,36 +132,33 @@ Add translations for your language using Starlight’s built-in [internationaliz
 
    ```json title="src/content/i18n/en.json"
    {
-   	"docsearch.button.buttonText": "Search",
-   	"docsearch.button.buttonAriaLabel": "Search",
+   	"docsearch.searchBox.resetButtonTitle": "Clear the query",
+   	"docsearch.searchBox.resetButtonAriaLabel": "Clear the query",
+   	"docsearch.searchBox.cancelButtonText": "Cancel",
+   	"docsearch.searchBox.cancelButtonAriaLabel": "Cancel",
 
-   	"docsearch.modal.searchBox.resetButtonTitle": "Clear the query",
-   	"docsearch.modal.searchBox.resetButtonAriaLabel": "Clear the query",
-   	"docsearch.modal.searchBox.cancelButtonText": "Cancel",
-   	"docsearch.modal.searchBox.cancelButtonAriaLabel": "Cancel",
+   	"docsearch.startScreen.recentSearchesTitle": "Recent",
+   	"docsearch.startScreen.noRecentSearchesText": "No recent searches",
+   	"docsearch.startScreen.saveRecentSearchButtonTitle": "Save this search",
+   	"docsearch.startScreen.removeRecentSearchButtonTitle": "Remove this search from history",
+   	"docsearch.startScreen.favoriteSearchesTitle": "Favorite",
+   	"docsearch.startScreen.removeFavoriteSearchButtonTitle": "Remove this search from favorites",
 
-   	"docsearch.modal.startScreen.recentSearchesTitle": "Recent",
-   	"docsearch.modal.startScreen.noRecentSearchesText": "No recent searches",
-   	"docsearch.modal.startScreen.saveRecentSearchButtonTitle": "Save this search",
-   	"docsearch.modal.startScreen.removeRecentSearchButtonTitle": "Remove this search from history",
-   	"docsearch.modal.startScreen.favoriteSearchesTitle": "Favorite",
-   	"docsearch.modal.startScreen.removeFavoriteSearchButtonTitle": "Remove this search from favorites",
+   	"docsearch.errorScreen.titleText": "Unable to fetch results",
+   	"docsearch.errorScreen.helpText": "You might want to check your network connection.",
 
-   	"docsearch.modal.errorScreen.titleText": "Unable to fetch results",
-   	"docsearch.modal.errorScreen.helpText": "You might want to check your network connection.",
+   	"docsearch.footer.selectText": "to select",
+   	"docsearch.footer.selectKeyAriaLabel": "Enter key",
+   	"docsearch.footer.navigateText": "to navigate",
+   	"docsearch.footer.navigateUpKeyAriaLabel": "Arrow up",
+   	"docsearch.footer.navigateDownKeyAriaLabel": "Arrow down",
+   	"docsearch.footer.closeText": "to close",
+   	"docsearch.footer.closeKeyAriaLabel": "Escape key",
+   	"docsearch.footer.searchByText": "Search by",
 
-   	"docsearch.modal.footer.selectText": "to select",
-   	"docsearch.modal.footer.selectKeyAriaLabel": "Enter key",
-   	"docsearch.modal.footer.navigateText": "to navigate",
-   	"docsearch.modal.footer.navigateUpKeyAriaLabel": "Arrow up",
-   	"docsearch.modal.footer.navigateDownKeyAriaLabel": "Arrow down",
-   	"docsearch.modal.footer.closeText": "to close",
-   	"docsearch.modal.footer.closeKeyAriaLabel": "Escape key",
-   	"docsearch.modal.footer.searchByText": "Search by",
-
-   	"docsearch.modal.noResultsScreen.noResultsText": "No results for",
-   	"docsearch.modal.noResultsScreen.suggestedQueryText": "Try searching for",
-   	"docsearch.modal.noResultsScreen.reportMissingResultsText": "Believe this query should return results?",
-   	"docsearch.modal.noResultsScreen.reportMissingResultsLinkText": "Let us know."
+   	"docsearch.noResultsScreen.noResultsText": "No results for",
+   	"docsearch.noResultsScreen.suggestedQueryText": "Try searching for",
+   	"docsearch.noResultsScreen.reportMissingResultsText": "Believe this query should return results?",
+   	"docsearch.noResultsScreen.reportMissingResultsLinkText": "Let us know."
    }
    ```
