Link to config reference in site search docs

--- a/docs/src/content/docs/guides/site-search.mdx
+++ b/docs/src/content/docs/guides/site-search.mdx
@@ -78,7 +78,7 @@ If you have access to [Algolia’s DocSearch program](https://docsearch.algolia.
 
    </Tabs>
 
-2. Add the DocSearch plugin to your Starlight config in `astro.config.mjs` and pass it your Algolia `appId`, `apiKey`, and `indexName`:
+2. Add DocSearch to your Starlight [`plugins`](/reference/configuration/#plugins) config in `astro.config.mjs` and pass it your Algolia `appId`, `apiKey`, and `indexName`:
 
    ```js ins={4,10-16}
    // astro.config.mjs
