--- a/docs/src/content/docs/guides/site-search.mdx
+++ b/docs/src/content/docs/guides/site-search.mdx
@@ -1,6 +1,8 @@
 ---
 title: Site Search
 description: Learn about Starlight’s built-in site search features and how to customize them.
+sidebar:
+  badge: New
 ---
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
