translate example site title

--- a/docs/src/content/docs/zh-cn/guides/site-search.mdx
+++ b/docs/src/content/docs/zh-cn/guides/site-search.mdx
@@ -91,7 +91,7 @@ title: 部分索引的页面
    export default defineConfig({
    	integrations: [
    		starlight({
-   			title: 'Site with DocSearch',
+   			title: '使用 DocSearch 的网站',
    			plugins: [
    				starlightDocSearch({
    					appId: 'YOUR_APP_ID',
